<?xml version="1.0"?>
<package format="3">
  <name>motion_coordinator</name>
  <version>0.0.0</version>
  <description>High level motion coordination for the ABB YuMi</description>

  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>
  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit2_wrapper</depend>
  <depend>rws_clients</depend>
  <depend>kdl_wrapper</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
