<?xml version="1.0"?>
<package format="3">
  <name>rws_clients</name>
  <version>1.0.0</version>
  <description>Manage robot through Robot Web Services</description>
  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>

  <license>Apache License 2.0</license>
  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>
  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rctuils</depend>
  <depend>rclcpp_action</depend>
  
  <depend>abb_robot_manager_interfaces</depend>
  <depend>sg_control_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
